--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "tombug",
+  "name": "team-it",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
+    "heroku-postbuild": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
+    "@akveo/ng2-completer": "^9.0.1",
     "@angular/animations": "~10.0.6",
     "@angular/common": "~10.0.6",
     "@angular/compiler": "~10.0.6",
@@ -19,7 +21,23 @@
     "@angular/platform-browser": "~10.0.6",
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
+    "@ckeditor/ckeditor5-angular": "^1.2.3",
+    "@ckeditor/ckeditor5-build-classic": "^21.0.0",
+    "@ckeditor/ckeditor5-build-inline": "^21.0.0",
+    "@types/bootstrap": "^4.5.0",
+    "@types/jquery": "^3.5.1",
+    "bootstrap": "^4.5.0",
+    "chart.js": "^2.9.3",
+    "ckeditor5": "^21.0.0",
+    "font-awesome": "^4.7.0",
+    "heroku-ssl-redirect": "^0.1.1",
+    "jquery": "^3.5.1",
+    "ng2-charts": "^2.3.2",
+    "ng2-smart-table": "^1.6.0",
+    "ng2-table": "^1.3.2",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
+    "socket.io-client": "^2.3.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
